[package]
name = "mobilecoind-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
# third party
clap = { version = "4.1", features = ["derive", "env"] }
displaydoc = "0.2"
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
grpcio = "0.12.1"
protobuf = "2.27.1"
rust_decimal = "1.28"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
# This is for egui's text logs
tracing-subscriber = "0.3"

# mobilecoin
mc-account-keys = { path = "deqs/mobilecoin/account-keys" }
mc-api = { path = "deqs/mobilecoin/api" }
mc-mobilecoind-api = { path = "deqs/mobilecoin/mobilecoind/api" }
mc-transaction-types = { path = "deqs/mobilecoin/transaction/types" }
mc-util-keyfile = { path = "deqs/mobilecoin/util/keyfile" }
mc-util-uri = { path = "deqs/mobilecoin/util/uri" }

# deqs
deqs-api = { path = "deqs/api" }

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "65f8af4ca0bc1cb2fd2148c3259a0a76b155ff3e" }
# This version contains iOS build fixes
#cmake = { git = "https://github.com/alexcrichton/cmake-rs", rev = "5f89f90ee5d7789832963bffdb2dcb5939e6199c" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "4194e36abc75722e6fba7d552e719448fc38c51f" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "5c98ae068ee4652d6df6463b549fbf2d5d132faa" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "c1966b8743d320cd07a54191475e5c0f94b2ea30" }

# Override diesel dependency with our fork, to statically link SQLite.
# diesel = { git = "https://github.com/mobilecoinofficial/diesel", rev = "026f6379715d27c8be48396e5ca9059f4a263198" }
