[package]
name = "mobilecoind-buddy"
version = "0.1.0"
edition = "2021"

[dependencies]
# third party
clap = { version = "4.1", features = ["derive", "env"] }
displaydoc = "0.2"
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",
] }
grpcio = "0.12.1"
protobuf = "2.27.1"
rust_decimal = "1.28"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
# This is for egui's text logs
tracing-subscriber = "0.3"

# mobilecoin
mc-account-keys = { path = "deqs/mobilecoin/account-keys" }
mc-api = { path = "deqs/mobilecoin/api" }
mc-mobilecoind-api = { path = "deqs/mobilecoin/mobilecoind/api" }
mc-transaction-extra = { path = "deqs/mobilecoin/transaction/extra" }
mc-transaction-types = { path = "deqs/mobilecoin/transaction/types" }
mc-util-keyfile = { path = "deqs/mobilecoin/util/keyfile" }
mc-util-uri = { path = "deqs/mobilecoin/util/uri" }

# deqs
deqs-api = { path = "deqs/api" }

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "9abfdc054d9ba65f1e185ea1e6eff3947ce879dc" }

curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "99c0520aa79401b69fb51d38172cd58c6a256cfb" }

# Fix issues with recent nightlies, bump curve25519-dalek version
ed25519-dalek = { git = "https://github.com/dalek-cryptography/ed25519-dalek.git", rev = "2931c688eb11341a1145e257bc41d8ecbe36277c" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "b76d8c3a50671b08af0874b25b2543d3302d794d" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "4fbaa3343301c62cfdbc3023c9f485257e6b718a" }
